some changes in the demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -27,6 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you installed phitigra with `pip`, you can simply type `from phitigra import GraphEditor`.\n",
     "The editor widget is a `GraphEditor` object. By default the canvas is empty; you can add vertices and edges by clicking on *add vertex or edge* and clicking on the canvas."
    ]
   },
@@ -548,49 +549,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can even be used to produce animated images:"
+    "This could even be used to produce animated images."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "editor8 = GraphEditor(graphs.GridGraph([5,5]), default_radius=20, default_vertex_color='white', show_vertex_labels=False)\n",
-    "editor8.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Adapted from https://www.geeksforgeeks.org/create-and-save-animated-gif-with-python-pillow\n",
-    "\n",
-    "from PIL import Image\n",
-    "\n",
-    "images = []\n",
-    "editor8._multi_canvas.sync_image_data = True\n",
-    "\n",
-    "for _ in widget_BFS(editor8, source=editor8.graph.random_vertex()):\n",
-    "    wait()\n",
-    "    image_data = editor8._multi_canvas.get_image_data()\n",
-    "    image = Image.fromarray(image_data)\n",
-    "    images.append(image)\n",
-    "\n",
-    "\n",
-    "images[0].save('bfs.gif', save_all = True, append_images = images[1:], optimize = False, duration = 10)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
