some changes in the demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you installed phitigra with `pip`, you can simply type `from phitigra import GraphEditor`.\n",
+    "If you installed phitigra on your machine with `pip`, you can simply type `from phitigra import GraphEditor`.\n",
     "The editor widget is a `GraphEditor` object. By default the canvas is empty; you can add vertices and edges by clicking on *add vertex or edge* and clicking on the canvas."
    ]
   },
@@ -115,77 +115,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Application 1: testing a conjecture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def conjecture(G):\n",
-    "    return not G.is_vertex_transitive() or G.is_hamiltonian()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us [conjecture](https://en.wikipedia.org/wiki/Lov%C3%A1sz_conjecture#Hamiltonian_cycle) that every vertex transitive graph is hamiltonian. Then `conjecture(G)` should return `True` for every graph `G`. We can to test in on various small graphs drawn in the widget. If the graph in the above widget is still the Petersen graph, the following should return `False`, disproving the conjecture."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conjecture(editor2.get_graph())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Application 2: producing pictures for your papers\n",
-    "\n",
-    "The drawing of the graph in the editor can be exported to a latex (tikz) picture to be included in a paper. The latex code can be obtained as follows: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "latex(editor2.graph)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that only the positions of the vertices will be kept. See [this page](https://doc.sagemath.org/html/en/tutorial/latex.html#an-example-combinatorial-graphs-with-tkz-graph) for more details about exporting graphs to latex . The resulting pdf image can be seen as follows."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view(editor2.graph)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above requires ``pdflatex``. It  will fail if you run this demo on binder.\n",
-    "\n",
     "## Widget settings\n",
     "\n",
     "Several parameters of the widget can be changed:\n",
@@ -336,9 +265,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running an algorithm step by step\n",
+    "## Applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application 1: testing a conjecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conjecture(G):\n",
+    "    return not G.is_vertex_transitive() or G.is_hamiltonian()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us [conjecture](https://en.wikipedia.org/wiki/Lov%C3%A1sz_conjecture#Hamiltonian_cycle) that every vertex transitive graph is hamiltonian. Then `conjecture(G)` should return `True` for every graph `G`. We can to test in on various small graphs drawn in the widget. If the graph in the widget `editor2` is still the Petersen graph, the following should return `False`, disproving the conjecture."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conjecture(editor2.get_graph())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application 2: producing pictures for your papers or presentations\n",
     "\n",
-    "Below we define a function that, when called on a `Graph Editor` widget and a source vertex, returns a generator. Each time an object is extracted from the generator (these objects are `None`), one step of Dijkstra's algorithm is executed on the graph of the widget and the colors and labels of the vertices are updated accordingly. We then define a button to trigger the runs of these steps. "
+    "The drawing of the graph in the editor can be exported to a latex (tikz) picture to be included in a paper. The latex code can be obtained as follows. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "latex(editor2.graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that only the positions of the vertices will be kept. See [this page](https://doc.sagemath.org/html/en/tutorial/latex.html#an-example-combinatorial-graphs-with-tkz-graph) for more details about exporting graphs to latex . The resulting pdf image can be seen as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view(editor2.graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above requires ``pdflatex``. It  will fail if you run this demo on binder.\n",
+    "\n",
+    "### Application 3: running an algorithm step by step\n",
+    "\n",
+    "To run an algorithm step by step, we use the [`yield` statement](https://wiki.python.org/moin/Generators) which alloes us to stop the run at predefined times. Below we define a function that, when called on a `Graph Editor` widget and a source vertex, returns a generator. Each time an object is extracted from the generator (these objects are `None`), one step of Dijkstra's algorithm is executed on the graph of the widget and the colors and labels of the vertices are updated accordingly. We then define a button to trigger the runs of these steps. "
    ]
   },
   {
@@ -350,7 +357,7 @@
     "def step_by_step_dijkstra(w, source):\n",
     "    # Dijkstra's algorithm + some 'yield' statements to pause the algorithm at interesting times\n",
     "    # and changes of colors of the graph edges and vertices.\n",
-    "    # Adapted from the pseudocode at https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Pseudocode\n",
+    "    # Adapted from https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#Pseudocode\n",
     "\n",
     "    G = w.graph\n",
     "    Q = G.vertices()\n",
@@ -371,6 +378,8 @@
     "                u = v\n",
     "        Q.remove(u)\n",
     "        w._select_vertex(u, redraw=True)\n",
+    "        # Here the `yield` statement is not used to return anything interesting, but\n",
+    "        # instead to pause the algorithm until the user decides to run the next step\n",
     "        yield\n",
     "        \n",
     "        for v in G.neighbor_iterator(u):\n",
@@ -380,12 +389,12 @@
     "            if w.dist[v] == '?' or alt < w.dist[v]:\n",
     "                # update\n",
     "                if prev[v] is not None:\n",
+    "                    # A shortcut has been found!\n",
     "                    w.set_edge_color((v, prev[v]), 'cyan')\n",
     "                \n",
     "                w.dist[v] = alt\n",
     "                w.maxdist = max(w.maxdist, alt)\n",
     "                prev[v] = u\n",
-    "                w.set_vertex_color(v, 'green')\n",
     "                w.set_edge_color((u,v), 'orange')\n",
     "            else:\n",
     "                w.set_edge_color((u,v), 'lightgray')\n",
@@ -402,6 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import Button\n",
+    "\n",
     "g = graphs.GridGraph([5,5])\n",
     "# Give random distances to edges\n",
     "for u,v in g.edge_iterator(labels=False):\n",
@@ -411,15 +422,7 @@
     "editor6.dist = {v: '?' for v in editor6.graph}\n",
     "editor6.done = {v : False  for v in editor6.graph}\n",
     "\n",
-    "editor7.get_vertex_label = lambda v: str(editor7.dist[v])\n",
-    "\n",
-    "button = Button(\n",
-    "    description='Next step',\n",
-    "    disabled=False,\n",
-    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='next step',\n",
-    "    icon='forward' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
+    "editor6.get_vertex_label = lambda v: str(editor6.dist[v])\n",
     "\n",
     "def color_label(w, v):\n",
     "    if w.get_vertex_label(v) == '?':\n",
@@ -435,18 +438,32 @@
     "    else:\n",
     "        return 'white'\n",
     "\n",
+    "# Redefine the function that assigns colors to vertices, to\n",
+    "# color them according to their status (discovered, processed or undiscovered)\n",
+    "# and their distance from the source\n",
     "editor6.get_vertex_color = lambda v: color_label(editor6, v)\n",
     "\n",
-    "gen = step_by_step_dijkstra(editor6, editor6.graph.random_vertex())\n",
+    "# Define a button widget to trigger the run of each step of the algorithm\n",
+    "button = Button(\n",
+    "    description='Next step',\n",
+    "    disabled=False,\n",
+    "    button_style='',\n",
+    "    tooltip='next step',\n",
+    "    icon='forward'\n",
+    ")\n",
     "\n",
-    "def button_clbk(b):\n",
+    "def button_clbk(b, generator):\n",
+    "    '''Callback for the button b'''\n",
     "    try:\n",
-    "        next(gen)\n",
+    "        next(generator)\n",
     "    except StopIteration:\n",
+    "        # Once the computation is done we disable the button\n",
     "        b.disabled = True\n",
     "\n",
+    "gen = step_by_step_dijkstra(editor6, editor6.graph.random_vertex())\n",
+    "        \n",
     "# tie the button to button_clbk\n",
-    "button.on_click(button_clbk)"
+    "button.on_click(lambda b: button_clbk(b, gen))"
    ]
   },
   {
@@ -471,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Animations\n",
+    "### Application 4: making animations\n",
     "\n",
     "To make an animated canvas, one can simply ask the algorithm to _wait_ between the important steps. As an example, below is an animation for BFS."
    ]
